# CompGraphicsFinal

./: CMakeLists.txt  Makefile  PROJECT_STRUCTURE.md  README.md  build.sh  callbacks.cpp  eerie_city  eerie_city.h  final  main.cpp  rendering.cpp  world_generation.cpp
include/common/: math_utils.h  shader_utils.h
include/glfw/: glfw_app.h
src/: main.cpp
src/common/: math_utils.cpp  shader_utils.cpp
src/glfw/: glfw_app.cpp
